[package]
name = "buster"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
cookie = "0.18.1"
http = "1.4.0"
http-body-util = "0.1.3"
hyper =  { version = "1.8.1", features = ["full"] }
hyper-util =  { version = "0.1.19", features = ["tokio"] }
tokio =  { version =  "1.48.0", features = ["full"] }
